--- a/index.html
+++ b/index.html
@@ -6,109 +6,111 @@
 -->
 <html>
 <head>
-	<title>Portafolio - Franco Sotelo</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>Portafolio - Franco Sotelo</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body class="is-preload">
 
 <!-- Header -->
 <section id="header">
-	<header>
-		<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-		<h1 id="logo"><a href="#">Franco Sotelo</a></h1>
-		<p>Bachiller en Ingeniería de Sistemas<br />
-			Universidad de Lima</p>
-	</header>
-	<nav id="nav">
-		<ul>
-			<li><a href="#one" class="active">Sobre mí</a></li>
-			<li><a href="#two">Experiencia</a></li>
-			<li><a href="#three">Proyectos</a></li>
-			<li><a href="#four">Contacto</a></li>
-		</ul>
-	</nav>
-	<footer>
-		<ul class="icons">
-			<li><a href="https://www.instagram.com/francosotelog/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="https://github.com/francosotelogomez" class="icon brands fa-github"><span class="label">Github</span></a></li>
-			<li><a href="mailto:francosottelogomez@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-		</ul>
-	</footer>
+    <header>
+        <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+        <h1 id="logo"><a href="#">Franco Sotelo</a></h1>
+        <p>Bachiller en Ingeniería de Sistemas<br />
+            Universidad de Lima</p>
+    </header>
+    <nav id="nav">
+        <ul>
+            <li><a href="#one" class="active">Sobre mí</a></li>
+            <li><a href="#two">Experiencia</a></li>
+            <li><a href="#three">Proyectos</a></li>
+            <li><a href="#four">Contacto</a></li>
+        </ul>
+    </nav>
+    <footer>
+        <ul class="icons">
+            <li><a href="https://www.instagram.com/francosotelog/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="https://github.com/francosotelogomez" class="icon brands fa-github"><span class="label">Github</span></a></li>
+            <li><a href="mailto:francosottelogomez@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+        </ul>
+    </footer>
 </section>
 
 <!-- Wrapper -->
 <div id="wrapper">
 
-	<!-- Main -->
-	<div id="main">
+    <!-- Main -->
+    <div id="main">
 
-		<!-- One -->
-		<section id="one">
-			<div class="image main" data-position="center">
-				<img src="images/banner.jpg" alt="" />
-			</div>
-			<div class="container">
-				<header class="major">
-					<h2>Sobre mí</h2>
-				</header>
-				<p>Soy egresado de Ingeniería de Sistemas con especialización en Ingeniería de Software. Me apasiona el desarrollo web, el análisis de datos y la inteligencia artificial. Me considero una persona proactiva y comprometida con la mejora continua. Actualmente tengo experiencia como practicante en PEQ Consultores y he trabajado en proyectos reales para empresas del sector privado como Luz del Sur y Sanna. Hablo español nativo e inglés avanzado.</p>
-			</div>
-		</section>
+        <!-- One -->
+        <section id="one">
+            <div class="image main" data-position="center">
+                <img src="images/banner.jpg" alt="" />
+            </div>
+            <div class="container">
+                <header class="major">
+                    <h2>Sobre mí</h2>
+                </header>
+                <p>Soy egresado de Ingeniería de Sistemas con especialización en Ingeniería de Software. Me apasiona el desarrollo web, el análisis de datos y la inteligencia artificial. Me considero una persona proactiva y comprometida con la mejora continua. Actualmente tengo experiencia como practicante en PEQ Consultores y he trabajado en proyectos reales para empresas del sector privado como Luz del Sur y Sanna. Hablo español nativo e inglés avanzado.</p>
+            </div>
+        </section>
 
-		<!-- Two -->
-		<section id="two">
-			<div class="container">
-				<h3>Experiencia</h3>
-				<p><strong>PEQ Consultores – Practicante de Desarrollo de Software (nov. 2023 – ago. 2024):</strong> Participé en el desarrollo de soluciones de software a medida para clientes del sector privado, trabajando principalmente en el desarrollo de interfaces desde cero con base en diseños en Figma, implementación de lógica de negocio en el front-end e integración con APIs. Utilicé tecnologías como Entity Framework en proyectos reales para Luz del Sur, Sanna, Adecco y Marketing Personal.</p>
-			</div>
-			
-		</section>
+        <!-- Two -->
+        <section id="two">
+            <div class="container">
+                <h3>Experiencia</h3>
+                <p><strong>PEQ Consultores – Practicante de Desarrollo de Software (nov. 2023 – ago. 2024):</strong> Participé en el desarrollo de soluciones de software a medida para clientes del sector privado, trabajando principalmente en el desarrollo de interfaces desde cero con base en diseños en Figma, implementación de lógica de negocio en el front-end e integración con APIs. Utilicé tecnologías como Entity Framework en proyectos reales para Luz del Sur, Sanna, Adecco y Marketing Personal.</p>
+            </div>
 
-		<!-- Three -->
-		<section id="three">
-			<div class="container">
-				<h3>Proyectos destacados</h3>
-				<ul>
-					<li><strong>Luz del Sur:</strong> Desarrollo del front-end de su nueva página web. Implementé pantallas desde cero a partir de diseños en Figma, conectándolas con lógica de negocio y APIs. También realicé mejoras en pantallas existentes aplicando diseño responsive.</li>
-					<li><strong>Sanna (clínica):</strong> Desarrollo de un módulo de control de permisos para roles de usuario. El sistema anterior usaba lógica rígida integrada en el sidebar (if rol = admin...). Implementé un sistema flexible que permite asignar permisos por módulo, submódulo y acción. Utilicé Entity Framework para integrarlo con la plataforma existente.</li>
-				</ul>
-			</div>
-		</section>
+        </section>
 
-		<!-- Four -->
-		<section id="four">
-			<div class="container">
-				<h3>Contáctame</h3>
-				<p>Si deseas saber más sobre mí, colaborar en un proyecto o revisar mi portafolio completo, no dudes en escribirme.</p>
-				<form method="post" action="#">
-					<div class="row gtr-uniform">
-						<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
-						<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Correo electrónico" /></div>
-						<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
-						<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
-						<div class="col-12">
-							<ul class="actions">
-								<li><input type="submit" class="primary" value="Enviar mensaje" /></li>
-								<li><input type="reset" value="Limpiar" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-			</div>
-		</section>
+        <!-- Three -->
+        <section id="three">
+            <div class="container">
+                <h3>Proyectos destacados</h3>
+                <ul>
+                    <li><strong>Luz del Sur:</strong> Desarrollo del front-end de su nueva página web. Implementé pantallas desde cero a partir de diseños en Figma, conectándolas con lógica de negocio y APIs. También realicé mejoras en pantallas existentes aplicando diseño responsive.</li>
+                    <li><strong>Sanna (clínica):</strong> Desarrollo de un módulo de control de permisos para roles de usuario. El sistema anterior usaba lógica rígida integrada en el sidebar (if rol = admin...). Implementé un sistema flexible que permite asignar permisos por módulo, submódulo y acción. Utilicé Entity Framework para integrarlo con la plataforma existente.</li>
+                    <li><strong>Adecco:</strong> Desarrollo de un módulo completo para carga masiva de subsidios en su plataforma web basada en .NET. Permitía subir múltiples subsidios mediante Excel, ejecutar lógica de negocio sobre cada uno, y mostrar resultados detallados (éxitos y errores), con opción de descarga en Excel. Implementé tanto el front-end como el back-end.</li>
+                    <li><strong>Marketing Personal:</strong> Adecuación responsive de la página principal de pedidos web, que originalmente no se adaptaba a dispositivos móviles. Implementé la vista mobile y de tablet (aprox. 50% de la web), mejorando la experiencia de usuario en distintos dispositivos. Proyecto desarrollado sobre .NET.</li>
+                </ul>
+            </div>
+        </section>
 
-	</div>
+        <!-- Four -->
+        <section id="four">
+            <div class="container">
+                <h3>Contáctame</h3>
+                <p>Si deseas saber más sobre mí, colaborar en un proyecto o revisar mi portafolio completo, no dudes en escribirme.</p>
+                <form method="post" action="#">
+                    <div class="row gtr-uniform">
+                        <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
+                        <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Correo electrónico" /></div>
+                        <div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
+                        <div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
+                        <div class="col-12">
+                            <ul class="actions">
+                                <li><input type="submit" class="primary" value="Enviar mensaje" /></li>
+                                <li><input type="reset" value="Limpiar" /></li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
 
-	<!-- Footer -->
-	<section id="footer">
-		<div class="container">
-			<ul class="copyright">
-				<li>&copy; Franco Sotelo. Todos los derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</section>
+    </div>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <ul class="copyright">
+                <li>&copy; Franco Sotelo. Todos los derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </section>
 
 </div>
 
