--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#one" class="active">Sobre mí</a></li>
             <li><a href="#two">Experiencia</a></li>
             <li><a href="#three">Proyectos</a></li>
-            <li><a href="#four">Contacto</a></li>
+<!--            <li><a href="#four">Contacto</a></li>-->
         </ul>
     </nav>
     <footer>
@@ -80,26 +80,26 @@
         </section>
 
         <!-- Four -->
-        <section id="four">
-            <div class="container">
-                <h3>Contáctame</h3>
-                <p>Si deseas saber más sobre mí, colaborar en un proyecto o revisar mi portafolio completo, no dudes en escribirme.</p>
-                <form method="post" action="#">
-                    <div class="row gtr-uniform">
-                        <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
-                        <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Correo electrónico" /></div>
-                        <div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
-                        <div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
-                        <div class="col-12">
-                            <ul class="actions">
-                                <li><input type="submit" class="primary" value="Enviar mensaje" /></li>
-                                <li><input type="reset" value="Limpiar" /></li>
-                            </ul>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+<!--        <section id="four">-->
+<!--            <div class="container">-->
+<!--                <h3>Contáctame</h3>-->
+<!--                <p>Si deseas saber más sobre mí, colaborar en un proyecto o revisar mi portafolio completo, no dudes en escribirme.</p>-->
+<!--                <form method="post" action="#">-->
+<!--                    <div class="row gtr-uniform">-->
+<!--                        <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>-->
+<!--                        <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Correo electrónico" /></div>-->
+<!--                        <div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>-->
+<!--                        <div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>-->
+<!--                        <div class="col-12">-->
+<!--                            <ul class="actions">-->
+<!--                                <li><input type="submit" class="primary" value="Enviar mensaje" /></li>-->
+<!--                                <li><input type="reset" value="Limpiar" /></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </section>-->
 
     </div>
 
