--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <li><a href="https://www.instagram.com/francosotelog/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a href="https://github.com/francosotelogomez" class="icon brands fa-github"><span class="label">Github</span></a></li>
             <li><a href="mailto:francosottelogomez@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="https://www.linkedin.com/in/francosotelo/" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
+
         </ul>
     </footer>
 </section>
@@ -107,7 +109,7 @@
     <section id="footer">
         <div class="container">
             <ul class="copyright">
-                <li>&copy; Franco Sotelo. Todos los derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; Franco Sotelo. Todos los derechos reservados.</li>
             </ul>
         </div>
     </section>
